--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       QDRANT_COLLECTION: wanna2play_games
       OLLAMA_BASE_URL: ${OLLAMA_BASE_URL:-}
       OLLAMA_EMBED_MODEL: ${OLLAMA_EMBED_MODEL:-nomic-embed-text}
+    extra_hosts:
+      - host.docker.internal:host-gateway
     ports:
       - "127.0.0.1:3210:3000"
     volumes:
