Add Steam importer (docker compose tools)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 # - To run Ollama locally: https://ollama.com/
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_EMBED_MODEL=nomic-embed-text
+
+# Steam import (optional)
+# 1) Create a Steam Web API key: https://steamcommunity.com/dev/apikey
+# 2) Find your SteamID64 (e.g. https://steamid.io/)
+STEAM_API_KEY=
+STEAM_ID=
+
+# Importer tuning (optional)
+IMPORT_CONCURRENCY=4
