Steam importer: add no-API-key fallback

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,14 @@ OLLAMA_EMBED_MODEL=nomic-embed-text
 STEAM_API_KEY=
 STEAM_ID=
 
+# Steam import without Web API key (fallback)
+# If you cannot (or don't want to) create a Web API key, you can import from the Steam Community games list.
+# This requires your Steam "Game details" privacy to be set to Public.
+# You can set either:
+# - a full profile URL (https://steamcommunity.com/id/<vanity> or /profiles/<steamid64>)
+# - a SteamID64
+# - a vanity ID
+STEAM_PROFILE=
+
 # Importer tuning (optional)
 IMPORT_CONCURRENCY=4
