Steam importer: support local Steam install

--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,20 @@ STEAM_ID=
 
 # Steam import without Web API key (fallback)
 # If you cannot (or don't want to) create a Web API key, you can import from the Steam Community games list.
-# This requires your Steam "Game details" privacy to be set to Public.
+# This used to work for public profiles, but Steam may now require login for /games (so consider it unreliable).
+# If you have Steam installed on the host, prefer STEAM_LOCAL_ROOT instead (installed games only).
 # You can set either:
 # - a full profile URL (https://steamcommunity.com/id/<vanity> or /profiles/<steamid64>)
 # - a SteamID64
 # - a vanity ID
 STEAM_PROFILE=
+
+# Steam import from a local Steam installation (installed games only)
+# Linux usually uses one of:
+# - ~/.local/share/Steam
+# - ~/.steam/steam
+# - ~/.var/app/com.valvesoftware.Steam/.local/share/Steam (Flatpak)
+STEAM_LOCAL_ROOT=
 
 # Importer tuning (optional)
 IMPORT_CONCURRENCY=4
